Fix menu being visible on page change
This may not be necessary once deployed

--- a/app/public/wp-content/themes/wedding-site/assets/css/main.css
+++ b/app/public/wp-content/themes/wedding-site/assets/css/main.css
@@ -536,12 +536,13 @@ footer a {
   width: fit-content;
   height: 60vh;
   color: #ffffff;
+  opacity: 0;
   margin-top: -52px;
   background-color: #9a6e44;
   border-bottom-left-radius: 15px;
   transform-origin: 0% 0%;
   transform: translate(100%, 0);
-  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+  transition: opacity 0.1s ease, transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
 }
 @media (max-width: 800px) {
   .menu-toggle ul {
@@ -568,7 +569,9 @@ footer a {
   border-color: rgb(255, 255, 255);
 }
 .menu-toggle input:checked ~ ul {
+  opacity: 1;
   transform: translate(-64%, 0);
+  transition: opacity 0.1s ease;
 }
 
 .hero {
