--- a/app/public/wp-content/themes/wedding-site/assets/sass/components/_main-menu.scss
+++ b/app/public/wp-content/themes/wedding-site/assets/sass/components/_main-menu.scss
@@ -74,12 +74,14 @@
         width: fit-content;
         height: 60vh;
         color: $white;
+        opacity: 0;
         margin-top: -52px;
         background-color: $primary;
         border-bottom-left-radius: 15px;
         transform-origin: 0% 0%;
         transform: translate(100%, 0);
-        transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+        transition: opacity 0.1s ease,
+            transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
 
         @media (max-width: 800px) {
             height: 60vh;
@@ -109,6 +111,8 @@
     }
 
     input:checked ~ ul {
+        opacity: 1;
         transform: translate(-64%, 0);
+        transition: opacity 0.1s ease;
     }
 }
